# WaifuChamber

./: README.md
exercises/ex01/: AST.txt  README.md  solutions.md
exercises/ex01/task1/: hello  hello_boost
exercises/ex01/task2/: vec.cpp
exercises/ex01/task3/: CMakeLists.txt
exercises/ex01/task3/app/: CMakeLists.txt  app.cpp
exercises/ex01/task3/libBar/: CMakeLists.txt
exercises/ex01/task3/libBaz/: CMakeLists.txt  baz.cpp
exercises/ex01/task3/libFoo/: CMakeLists.txt
exercises/ex02/: README.md  solution.md
exercises/ex02/task1/: task1_solution.md
exercises/ex02/task1_old/: tas1_info.md
exercises/ex02/task2/: CMakeLists.txt  iterations.cpp  task2_solution.md
exercises/ex02/task3/: README.md  strange.cpp
exercises/ex03/: README.md  solution.md
exercises/ex03/task1/: My_unique_ptr.cpp  My_unique_ptr.hpp  ReferenceCounter.cpp  ReferenceCounter.hpp  Vec2.hpp  main.cpp  main.hpp  shared_ptr_to_vec2.cpp  shared_ptr_to_vec2.hpp  unique_ptr_to_vec2.cpp  unique_ptr_to_vec2.hpp
exercises/ex03/task2/cpp/: room.cpp
exercises/ex03/task2/java/: Person.java  Room.java  manager.java
exercises/ex04/: README.md
exercises/ex04/task1/: Person.cpp  Person.h
exercises/ex04/task2/: Interceptor.cpp  Interceptor.hpp  executable.cpp  instructions.md
exercises/ex05/: README.md  task1.cpp
exercises/ex05/task2/: Person.cpp  Person.h  list.g  listl.g  plot.gplot  set.g  setl.g  unordered.g  unorderedl.g  vec.g  vecl.g
exercises/ex05/task3/: bar.cpp  foo.cpp  instruction.md  main.cpp  plugin.hpp
exercises/ex05/task4/: victim.c
exercises/ex06/: README.md  task4.md
exercises/ex06/task1/: CMakeLists.txt  MyVector.cpp  MyVector.hpp  Person.hpp  main.cpp  myVector.cpp  myVector.hpp
exercises/ex07/: README.md
exercises/ex07/task1/: Person.hpp  main.cpp
exercises/ex07/task2/: CMakeLists.txt  main.cpp  vector.h
exercises/ex07/task3/: 3.cpp
exercises/ex08/: README.md  task1.cpp  task2.md
exercises/ex08/task3/: CMakeLists.txt  NUM_LIST1.cpp  README.md  demo.cpp  main.cpp  main.hpp  picture.ppm  picture2.ppm  picture3.ppm
exercises/ex09/: README.md
exercises/ex09/task1/Calculator/: Calculator.pro  calculator.cpp  calculator.h  calculator.hpp  calculator.ui  main.cpp
exercises/ex09/task2/: config.cpp  config.def  enum.def
exercises/ex10/: README.md
exercises/test/: 16_true_type_fonts.cpp  CMakeLists.txt
sideproject/: README.md  custom_spec.txt  rpg_specification.md
sideproject/src/: CMakeLists.txt  Makefile  main.cpp  savegame.txt  savegame_fresh.txt
sideproject/src/files/rooms/: castle.txt  cool_room.txt  deep_forest.txt  desert1.txt  desert2.txt  dungeon1.txt  dungeon2.txt  dungeon3.txt  dungeon4.txt  dungeon5.txt  empty.txt  fancy_forest.txt  final.txt  forest.txt  forest1.txt  forest2.txt  forest3.txt  forest4.txt  gates.txt  library.txt  mazement1.txt  mazement2.txt  mazement3.txt  mazement4.txt  mazement5.txt  mazement6.txt  mazement7.txt  plains.txt  snowy_mountain.txt  testroom.txt  testroombackup.txt  tower1.txt  tower2.txt  tower3.txt  tutorial1.txt
sideproject/src/files/rooms_old/: fancy_forest.txt  forest.txt  library.txt  mazement2.txt  mazement3.txt  mazement4.txt  mazement6.txt  plains.txt
sideproject/src/game/: CMakeLists.txt  GlobalConstants.cpp  GlobalConstants.h  GlobalObjects.h  README.md  SavedVariables.cpp  SavedVariables.def  SavedVariables.h  game.cpp  game.h
sideproject/src/game/Inventory/: EstusFlask.cpp  EstusFlask.hpp  Inventory.cpp  Inventory.hpp  InventoryOld.cpp  InventoryOld.hpp  Item.cpp  Item.hpp  Item2.cpp  Item2.hpp  ItemOld.cpp  ItemOld.hpp  RangedWeapon.cpp  RangedWeapon.hpp  RangedWeaponOld.cpp  RangedWeaponOld.hpp  Slot.cpp  Slot.hpp  SlotOld.cpp  SlotOld.hpp
sideproject/src/game/entities/player/: Ability.cpp  Ability.h  AbilityPicker.cpp  AbilityPicker.h  Bar.cpp  Bar.hpp  Boss.cpp  Boss.h  BossBuilder.cpp  BossBuilder.h  CMakeLists.txt  Checkpoint.cpp  Checkpoint.h  Enemy.cpp  Enemy.h  EnemyBuilder.cpp  EnemyBuilder.h  EnemyInformation.h  Interactable.h  Movable.cpp  Movable.h  Pickup.cpp  Pickup.hpp  PickupFunctions.cpp  PickupFunctions.hpp  PickupItems.h  Projectile.cpp  Projectile.hpp  Shopkeeper.cpp  Shopkeeper.hpp  SoundEffect.h  Sprites.cpp  Sprites.h  TelegraphedAbility.cpp  TelegraphedAbility.h  TelegraphedAttack.cpp  TelegraphedAttack.h  player.cpp  player.h  statuseffect.cpp  (+1 more)
sideproject/src/game/menu/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp  OptionsMenu.cpp  OptionsMenu.hpp
sideproject/src/game/utils/: CMakeLists.txt  CollisionTree.cpp  CollisionTree.h  Image.cpp  Image.h  ImageNew.cpp  ImageNew.hpp  InputManager.cpp  InputManager.h  KeyboardMapping.h  LingeringText.cpp  LingeringText.hpp  Popup.cpp  Popup.hpp  PositionSize.hpp  Rgba.hpp  Text.cpp  Text.hpp  Vec2.h  blackmagic.h  image.cpp  image.h  renderer.cpp  renderer.h  triangle.cpp  triangle.h  utility.cpp  utility.h  vec2.h
sideproject/src/game/world/: CMakeLists.txt  Gate.cpp  Gate.h  GlobalObjects.h  LockedWall.cpp  LockedWall.h  Map.cpp  Map.hpp  MapTile.cpp  MapTile.hpp  Message.cpp  Message.hpp  MusicPlayer.cpp  MusicPlayer.h  MusicPlayer.hpp  OneWay.cpp  OneWay.hpp  Platform.cpp  Platform.h  gateInformation.h  room.cpp  room.h
